checkpoint, changed how adding edges/removing works
